Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2309

Uninteroperable conf_params not documented

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0, Lustre 2.1.5
    • Lustre 2.3.0, Lustre 2.4.0, Lustre 2.1.4
    • None
    • 3
    • 5522

      If a 2.3 FS has the jobid_var conf_param set then it seems (http://jira.whamcloud.com/browse/LU-1848) that 2.1/2.2 clients will be unable to mount that FS. Is this a bug or a fact of life? In either case is this documented anywhere? What other such parameters are there?

            yujian Jian Yu
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: