LU-2309 config: ignore unknown configuration param

Client or server should not fail to mount if it hits
a configuration parameter that it doesn't understand.
This patch fixes class_process_config() to meet
the above requirement.

Signed-off-by: Yu Jian <yujian@whamcloud.com>
Change-Id: Ida537193459f08d804fc4c0f1f72630b416440e3
Reviewed-on: http://review.whamcloud.com/4663
Reviewed-by: Lai Siyao <laisiyao@whamcloud.com>
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>